--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <id class ="container">
-        <button id = "button">Click Me</button>
-        
-    </id>
-
+    <div class="container"></div>
 </body>
 </html>
