--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container"></div>
+    <div class="container">
+        <h2>Bishesh Thapa</h2>
+    </div>
 </body>
 </html>
